# aspen

./: .gitignore  README.md  client-public.key  hello.py  invitation_10_42_0_2.json  invitation_10_42_0_4.json  invitation_10_42_0_5.json  invitation_10_42_0_6.json  invite.json  privatekey  publickey  publickey_arnav  pyproject.toml  requirements.txt  setup.py  vpn.db
client/: cli.py
client/scripts/hosts/: add-host.sh  remove-host.sh
client/scripts/setup-wg0/: run.sh  wg0.conf.template
server/: cli.py  database.py  monitor.py  server.py
