[project]
name = "aspen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.115.6",
    "pydantic>=2.10.3",
    "python-wireguard>=0.2.2",
    "setuptools>=75.6.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "wireguard-tools>=0.5.0",
]

[project.scripts]
aspen-server = "server.cli:cli"
